# relay

./: .gitignore  LICENSE  README.md  Relay-Buffer.html  Relay-ReceiverHalf.html  Relay-SenderHalf.html  Relay-Session.html  doc-index.html  doc-index.json  index.html  relay.cabal  relay.haddock
.github/workflows/: ci.yml
src/: Relay.Buffer.html  Relay.ReceiverHalf.html  Relay.SenderHalf.html  Relay.Session.html
src/Relay/: Buffer.hs  ReceiverHalf.hs  SenderHalf.hs  Session.hs
test/: Main.hs
