cabal-version:      3.0
name:               relay
version:            0.1.0.0
synopsis:           Algebraic model for ordered message delivery
description:        A small library modeling ordered message delivery between actors as dual half-sessions connected by a sequencing protocol.
license:            BSD-3-Clause
license-file:       LICENSE
author:             Shane Fletcher
maintainer:         shayne@shaynefletcher.org
tested-with:        GHC == 9.14.1
category:           System
build-type:         Simple

source-repository head
    type:     git
    location: https://github.com/shayne-fletcher/relay.git

common warnings
    ghc-options: -Wall

library
    import:           warnings

    exposed-modules:
      Relay.Session
      Relay.SenderHalf
      Relay.ReceiverHalf
      Relay.Buffer

    build-depends:    base ^>=4.22.0.0
                    , containers >=0.8 && <0.9
                    , uuid-types >=1.0 && <1.1
    hs-source-dirs:   src
    default-language: GHC2024

test-suite relay-test
    import:           warnings
    default-language: GHC2024
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.22.0.0
      , containers >=0.8 && <0.9
      , relay
      , uuid-types >=1.0 && <1.1
      , tasty >=1.4
      , tasty-hunit >=0.10
      , tasty-quickcheck >=0.10
